@startuml
left to right direction
skinparam classAttributeIconSize 0
skinparam shadowing false

class Rol {
  - idRol : int
  - nombre : string
  - descripcion : string
  + registrarRol()
  + actualizarRol()
}

class Usuario {
  - idUsuario : int
  - rut : string
  - nombres : string
  - apellidos : string
  - correo : string
  - contrasena : string
  - telefono : string
  - idioma : string
  - estado : string
  + iniciarSesion()
  + cerrarSesion()
  + actualizarDatos()
}

class Cliente {
  - idCliente : int
  - fechaRegistro : date
  - estadoCliente : string
  + registrarCliente()
  + modificarReserva()
  + cancelarReserva()
}

class TipoHabitacion {
  - idTipoHabitacion : int
  - nombre : string
  - descripcion : string
  - capacidadMaxima : int
  - cantidadCamas : int
  - precioBase : decimal
  - estado : string
  + registrarTipo()
  + actualizarTipo()
}

class Habitacion {
  - idHabitacion : int
  - numero : string
  - piso : int
  - capacidad : int
  - descripcion : string
  - estado : string
  + consultarDisponibilidad()
  + actualizarEstado()
}

class Tarifa {
  - idTarifa : int
  - fechaInicio : date
  - fechaTermino : date
  - precioNoche : decimal
  - estado : string
  + registrarTarifa()
  + actualizarTarifa()
}

class Reserva {
  - idReserva : int
  - fechaReserva : date
  - fechaCheckIn : date
  - fechaCheckOut : date
  - cantidadHuespedes : int
  - estadoReserva : string
  - totalReserva : decimal
  - abonoRequerido : decimal
  - saldoPendiente : decimal
  - codigoReserva : string
  + registrarReserva()
  + calcularAbono()
  + actualizarEstado()
}

class Pago {
  - idPago : int
  - fechaPago : date
  - monto : decimal
  - metodoPago : string
  - estadoPago : string
  - referenciaPago : string
  + registrarPago()
  + validarPago()
}

class TicketQR {
  - idTicket : int
  - codigoQR : string
  - fechaEmision : date
  - urlQR : string
  - estado : string
  + generarQR()
  + descargarComprobante()
}

Rol "1" -- "*" Usuario
Usuario "1" -- "0..1" Cliente
Cliente "1" -- "*" Reserva
TipoHabitacion "1" -- "*" Habitacion
TipoHabitacion "1" -- "*" Tarifa
Habitacion "1" -- "*" Reserva
Reserva "1" -- "*" Pago
Reserva "1" -- "0..1" TicketQR

@enduml